--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,6 @@ base_url = "https://blog.hafi.is-a.dev"
 # Usable site directly from disk, Including Search: "/home/jieiku/.dev/abridge/public"
 # Also set index format = "elasticlunr_javascript", and in [extra] uglyurls = true, integrity = false
 # If you use the npm/node script then all you have to do is set offline = true, and everything else is automatic.
-
 title = "Hafi's Code Continuum"
 description = "Exploring coding related topics and problem solving with Rust, documenting the journey of trial, error, and occasional breakthroughs." #for SEO aim for 140-180 Characters
 theme = "abridge"
@@ -319,9 +318,9 @@ icon_author = "svgs fa-solid fa-pen-fancy"                                      
 ### UnComment any of these lines to enable their meta tags.
 ###############################################################################
 
-#security_header_referrer = "strict-origin-when-cross-origin"
+security_header_referrer = "strict-origin-when-cross-origin"
 
-#security_header_csp = "default-src 'none'; object-src 'none'; base-uri 'self'; manifest-src 'self'; connect-src 'self'; form-action 'self'; script-src 'self'; img-src 'self' data: cdn.cloudflare.com; frame-src 'self' www.youtube-nocookie.com player.vimeo.com; media-src 'self' data: cdn.cloudflare.com www.youtube-nocookie.com player.vimeo.com; font-src 'self' cdn.cloudflare.com cdn.jsdelivr.net fonts.gstatic.com; style-src 'self' cdn.cloudflare.com cdn.jsdelivr.net fonts.googleapis.com;"
+security_header_csp = "default-src 'none'; object-src 'none'; base-uri 'self'; manifest-src 'self'; connect-src 'self'; form-action 'self'; script-src 'self'; img-src 'self' data: cdn.cloudflare.com; frame-src 'self' www.youtube-nocookie.com player.vimeo.com; media-src 'self' data: cdn.cloudflare.com www.youtube-nocookie.com player.vimeo.com; font-src 'self' cdn.cloudflare.com cdn.jsdelivr.net fonts.gstatic.com; style-src 'self' cdn.cloudflare.com cdn.jsdelivr.net fonts.googleapis.com;"
 
 
 ###############################################################################
