--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,12 @@
 [build]
 publish = "public"
-command = "npm run abridge -- '--base-url https://hafis-code-continuum.netlify.app'"
+command = "npm run abridge -- '--base-url https://blog.hafi.is-a.dev'"
 
 [build.environment]
 ZOLA_VERSION = "0.19.1"
 
 [context.deploy-preview]
-command = "npm run abridge -- '--drafts --base-url https://hafis-code-continuum.netlify.app'"
+command = "npm run abridge -- '--drafts --base-url https://blog.hafi.is-a.dev'"
 
 [[headers]]
 for = "/*"
