--- a/netlify.toml
+++ b/netlify.toml
@@ -22,60 +22,55 @@ X-Frame-Options = "DENY"
 for = "/*"
 [headers.values]
 Content-Security-Policy = """
-    default-src 'self' https://hafis-code-continuum.netlify.app data: https:;
+    default-src 'self';
+    script-src 'self' 'unsafe-inline' 'unsafe-eval';
+    style-src 'self' 'unsafe-inline';
+    img-src 'self' data: https:;
+    font-src 'self';
+    object-src 'none';
     base-uri 'self';
+    form-action 'self';
+    frame-ancestors 'none';
     block-all-mixed-content;
     upgrade-insecure-requests;
 
-    script-src      'self'
-                    https://hafis-code-continuum.netlify.app
-                    talk.hyvor.com
-                    https://gc.zgo.at
-                    'unsafe-inline'
-                    'unsafe-eval';
-    script-src-elem 'self'
-                    https://hafis-code-continuum.netlify.app
-                    talk.hyvor.com
-                    https://gc.zgo.at;
+    # now augment with your external origins & hashes:
+    script-src
+      'self'
+      'unsafe-inline'
+      'unsafe-eval'
+      https://hafis-code-continuum.netlify.app
+      https://gc.zgo.at;
 
-    style-src       'self'
-                    https://hafis-code-continuum.netlify.app
-                    talk.hyvor.com
-                    cdn.cloudflare.com
-                    cdn.jsdelivr.net
-                    fonts.googleapis.com
-                    'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU='
-                    'sha256-p08VBe6m5i8+qtXWjnH/AN3klt1l4uoOLsjNn8BjdQo=';
+    script-src-elem
+      'self'
+      https://hafis-code-continuum.netlify.app
+      https://gc.zgo.at;
 
-    img-src         'self'
-                    data:
-                    https://hafis-code-continuum.netlify.app
-                    talk.hyvor.com
-                    cdn.cloudflare.com;
-    font-src        'self'
-                    https://hafis-code-continuum.netlify.app
-                    cdn.cloudflare.com
-                    cdn.jsdelivr.net
-                    fonts.gstatic.com;
-    frame-src       'self'
-                    https://hafis-code-continuum.netlify.app
-                    www.youtube-nocookie.com
-                    player.vimeo.com
-                    streamable.com;
-    media-src       'self'
-                    data:
-                    https://hafis-code-continuum.netlify.app
-                    cdn.cloudflare.com
-                    www.youtube-nocookie.com
-                    player.vimeo.com;
+    style-src
+      'self'
+      'unsafe-inline'
+      https://hafis-code-continuum.netlify.app
+      cdn.cloudflare.com
+      cdn.jsdelivr.net
+      fonts.googleapis.com
+      'sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU='
+      'sha256-p08VBe6m5i8+qtXWjnH/AN3klt1l4uoOLsjNn8BjdQo=';
 
-    object-src      'none';
-    manifest-src    'self' https://hafis-code-continuum.netlify.app;
-    worker-src      'self' https://hafis-code-continuum.netlify.app;
-    form-action     'self' https://hafis-code-continuum.netlify.app;
-    frame-ancestors 'none';
-
-    report-uri      /csp-report-endpoint
+    img-src
+      'self'
+      data:
+      https:;
+    font-src
+      'self';
+    object-src
+      'none';
+    base-uri
+      'self';
+    form-action
+      'self';
+    frame-ancestors
+      'none';
   """
 # Referrer policy
 Referrer-Policy = "strict-origin-when-cross-origin"
